--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <img src="fillerbanner.png">
-        <script src="app.js" async defer></script>
+        <script src="app.js" type="module" async defer></script>
     </body>
 </html>
