--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <img src="fillerbanner.png">
+        <canvas id="game"></canvas>
         <script src="app.js" type="module" async defer></script>
     </body>
 </html>
